--- a/RestaurantManagement.csproj
+++ b/RestaurantManagement.csproj
@@ -27,4 +27,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Image\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
